Update IntegrationTest.java
Java 8 compatibility